# wheeled_biped_robot

./: .gitignore  README.md  index.md
GA/: 4-bar_optimization.ipynb  4_bar_ga.py  animate_ga.ipynb
balance_control/: CMakeLists.txt
balance_control/src/: const_pid.cpp  robot.cpp  robot.h
choreonoid/ext/Wheeled_Biped/: CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp  minimum.cpp
choreonoid/ext/Wheeled_Biped/headers/: KF.h  controller.h  robot.h
choreonoid/ext/Wheeled_Biped/sources/: KF.cpp  controller.cpp  robot.cpp
choreonoid/sample/WB/: WB_minimum.cnoid
choreonoid/share/model/WB1/: WB1.body
choreonoid/share/model/WB1/parts/: l_r.STL
gazebo_sim/: CMakeLists.txt  package.xml
gazebo_sim/config/: joint_names_robot_sim.yaml
gazebo_sim/launch/: gazebo.launch  robot_close_chain.launch  robot_full.launch
gazebo_sim/meshes/: l_hip.STL  l_shank.STL  r_l.STL
gazebo_sim/urdf/: robot_sim.sdf  robot_sim.urdf
model/: WB1.body  WB2.body  WheeledBipedRobot.cnoid
pybullet/: robot_sim.ipynb
pybullet/robot_sim/meshes/: l_l.STL  l_wheel.STL
pybullet/robot_sim/urdf/: changed.urdf  robot.sdf  robot_sim.csv  robot_sim.urdf  temp_export.urdf
robot_control/: CMakeLists.txt  package.xml
robot_control/include/robot_control/: jump.h  lqr.h  robot.h
robot_control/scripts/: lqr.py
robot_control/src/: jump.cpp  lqr.cpp  robot.cpp
robot_control/srv/: Gain.srv  Joint_cmd.srv
robot_sim/: CMakeLists.txt  package.xml
robot_sim/config/: joint_names_robot_sim.yaml
robot_sim/launch/: wb_sim.launch
robot_sim/meshes/: r_hip.STL  r_r.STL
robot_sim/src/: CMakeLists.txt  simulation.cpp
robot_sim/urdf/: robot_sim.urdf
src/balance_control/: CMakeLists.txt  package.xml
src/balance_control/src/: const_pid.cpp  robot.cpp  robot.h
src/robot_control/: CMakeLists.txt  package.xml
src/robot_control/robot_control/src/: const_pid.cpp  home.cpp  robot.cpp
src/robot_control/src/: const_pid.cpp  controller.cpp  controller.h  robot.cpp  robot.h
src/robot_sim/config/: joint_names_robot_sim.yaml
src/robot_sim/launch/: gazebo.launch  robot_full.launch  rviz.launch
src/robot_sim/meshes/: base_link.STL  r_shank.STL  r_wheel.STL
src/robot_sim/urdf/: close_chain.sdf  robot_sim.sdf  robot_sim.urdf
src/robot_sim/world/: empty_world.world
